@@ -58,6 +58,7 @@ See docs/WHAT_IS_WEFTEND.md and docs/WHY_RECEIPTS.md for details.
   - No docker pull
   - No registry auth
   - No implicit network activity
+- Fail-closed precondition outcomes still write deterministic receipts (`safe_run_receipt.json`, `operator_receipt.json`).
 - Output includes deterministic adapter artifacts:
   analysis/adapter_summary_v0.json
   analysis/adapter_findings_v0.json
